# Engineering-degree-diploma

./: README.md
dev/guards/ESP32/: main.ino  timer_wrapper.cpp  timer_wrapper.hpp  utils.hpp
dev/guards/ESP32/src/: globals.hpp  miner.cpp  miner.hpp  timer_wrapper.cpp  timer_wrapper.hpp  utils.hpp
dev/guards/ESP32/timer_wrapper/: timer_wrapper.cpp  timer_wrapper.h
dev/mithra/: Cargo.toml
dev/mithra/config/: mqtt_devices.yaml  servers_contract.conf
dev/mithra/src/: main.rs
dev/mithra/src/system/: handlers.rs  mod.rs  structs.rs
dev/mithra/src/system/database/: mod.rs  queries.rs
dev/mithra/src/system/structs/: mod.rs
spec/guard/: guard.md
