[package]
name = "mithra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "2.34.0"
configparser = "3.0.0"
hostname-validator = "1.1.0"
json = "0.12.4"
postgres = { version = "0.19.2", features = ["with-chrono-0_4"] }
rumqttc = "0.9.0"
sscanf = "0.1.4"
yaml-rust = "0.4"